adding the form structure

--- a/index.html
+++ b/index.html
@@ -14,5 +14,17 @@
       </header>
       <!-- The End Of The Header-->
       <h1>Welcome to the Festival Garden Sign Up Form</h1>
+
+      <!-- The Beginning of the Form-->
+    <div class="container">
+        <form id="form-validation">
+          <h2 class="message-output"></h2>
+          <!-- enter first name-->
+          <input
+            type="text"
+            name="first-input"
+            placeholder="Enter First Name"
+            required
+          />
   
   </body>
