completed the form

--- a/index.html
+++ b/index.html
@@ -45,5 +45,43 @@
           title="Enter a username starting with a capital letter alphabets, numbers or an underscore"
           required
         />
+
+         <!-- enter email -->
+         <input
+         type="email"
+         name="email-input"
+         placeholder="Enter Email"
+         pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$"
+         required
+       />
+       <!--enter password -->
+       <input
+         type="password"
+         name="password-input"
+         placeholder="Enter Password"
+         pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"
+         title="Minimum eight characters, at least one letter and one number:"
+         required
+       />
+       <!-- enter phone -->
+       <input
+         type="tel"
+         name="tel-input"
+         placeholder="Enter Phone Number"
+         required
+       />
+       <!--City Option Selector-->
+       <select class="selection" name="city-location">
+         <option>Select Your Borough</option>
+         <option value="bronx">Thee Bronx</option>
+         <option value="brooklyn">Brooklyn</option>
+         <option value="queens">Queens</option>
+         <option value="manhattan">Manhattan</option>
+       </select>
+       <!--Submit Button-->
+       <button id="button-submit" type="submit">Submit Form</button>
+     </form>
+   </div>
   
   </body>
+</html>
