--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script defer src="script.js"></script>
+    <script defer src="main.js"></script>
     <title>The Festival Garden</title>
   </head>
   <body>
@@ -60,7 +60,7 @@
           name="password-input"
           placeholder="Enter Password"
           pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"
-          title="Minimum eight characters, at least one letter and one number:"
+          title="Minimum eight characters, at least one capital letter and one number:"
           required
         />
         <!-- enter phone -->
@@ -73,7 +73,7 @@
         <!--City Option Selector-->
         <select class="selection" name="city-location">
           <option>Select Your Borough</option>
-          <option value="bronx">Thee Bronx</option>
+          <option value="bronx">The Bronx</option>
           <option value="brooklyn">Brooklyn</option>
           <option value="queens">Queens</option>
           <option value="manhattan">Manhattan</option>
@@ -84,3 +84,5 @@
     </div>
   </body>
 </html>
+
+
