creating new style

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
         <button id="button-submit" type="submit">Submit Form</button>
       </form>
     </div>
+    <footer>
+      <ul id="ul-footer"></ul>
+    </footer>
   </body>
 </html>
-
-
