completed the section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>The Festival Garden</title>
   </head>
   <body>
+    <!-- the header and navbar -->
     <header>
       <nav id="menu"></nav>
     </header>
@@ -82,6 +83,7 @@
         <button id="button-submit" type="submit">Submit Form</button>
       </form>
     </div>
+    <!-- created the footer to implement the document fragement -->
     <footer>
       <ul id="ul-footer"></ul>
     </footer>
