made simple edits

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <!-- the header and navbar -->
     <header>
+        <!-- the navbar here -->
       <nav id="menu"></nav>
     </header>
     <!-- The End Of The Header-->
