added the eventlistener and completed the requirements

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
     <!-- created the footer to implement the document fragement -->
     <footer>
       <ul id="ul-footer"></ul>
+      <div>
+        <h3 class="footer-text">Click here to learn more about gardens</h3>
+      </div>
     </footer>
   </body>
 </html>
